Add some text content

--- a/views/anjou-poitou-touraine.handlebars
+++ b/views/anjou-poitou-touraine.handlebars
@@ -1,1 +1,47 @@
 <h1>Анжу, Пуату, Турен</h1>
+
+<p>Регион на западе - юго-западе Франции, граничащий с Бретанью, Аквитанией, Южной Нормандией, в 3-4 часах езды
+  от Парижа.</p>
+<p>Анжу и Пуату интересен для посещения весной, осенью, летом.</p>
+<p>Знаменитое. Замки Анже, Сомюр, вина Анжу, Синяя Борода, Футуроскоп, Уникальные болота и каналы Пуату, Собор Ле
+  Мана, Гонки 24 часа Ле Ман, сады Вилландри.</p>
+<p>Неожиданное. Графы Анжу — короли Англии (Фонтевро), Шоу Пюи де Фу, троглодиты.</p>
+<p>Красиво. Долина Луары в сочетании с замками. Например, замок Сомюр – наиболее впечатляющий средневековый замок,
+  возвышающийся над городом. В регионе традиционно здания делают из известняка и покрывают его ардуазом
+  серо-стального цвета.</p>
+<p>Интересно. Многочисленные замки с богатой историей, эти замки отличаются от "ближних" замков Луары, находящихся
+  между Орлеаном и Туром. Эти анжуйские – смотрятся как-то более настоящно что ли: Анже, Сомюр, Брисак, Ланже,
+  Азе, Юссе, Шинон, Вилландри, Монсоро. Отдельно надо отметить город Ле Ман с его выдающимся собором и старым
+  городом – местом многочисленных съемок исторических фильмов. И 24-часовые гонки Ле Мана и музей ретро спортивных
+  автомобилей. А также крупнейший женский монастырь – аббатство Фонтевро – место захоронения королей Англии, в том
+  числе и Ричарда Львиное Сердце.</p>
+<p>Завораживающе. Менгир Ле Мана, "Арка Желаний", Ночное шоу Ле Мана, Азе, Пью де Фу.</p>
+<p>Вкусно. Специализация Анжу запеченная свиная грудка rillauds с хрустящей корочкой подаваемая с красным каберне
+  Анжу (Cabernet d’Anjou) и Розовым Анжуйским (Rosé d’Anjou). Крем Анжу – взбитая сметана и яичный белок,
+  сопровождаемый ягодами. Суфле на базе Куантро (Cointreau). Хлебцы fouace сдобренные паштетом свиным или утиным
+  rillettes. Блюда из рыбы и птицы запеченные в соусе в частности угорь (bouilleture d’anguilles) или курица по
+  анжуйски из белого мяса (poulet a l’angevin). В этом регионе разводят грибы, которые правда называют парижские
+  шампиньоны. Анжуйские земли — это более тридцати винных апелясионов (appellation): в том числе из красных
+  терпкий шинон (chinon) и легкий сомюр (saumure) и сомюр шампьи (saumure champigny), розовое анжуйское, и белое
+  душистое почти медовое, но не приторное с интеллигентным вкусом, Кото де Лайон (Coteaux du Layon). А также
+  игристые вина и интересные ликеры: Куантро (Cointreau) и Комбье (Combier) — на базе цитрусоых, Гиньоле
+  (Guignolet d’Anjou) – на базе вишни.</p>
+<p>Весело. Обитатели Анжу, Вандеи и Пуату - большие любители праздников, которые привлекают в регион множество
+  туристов каждый месяц. Если Вы путешествуете с детьми, незабываемыми для Вас станут часы, проведенные в Парках
+  Футуроскоп и Пюи де Фу, в замке Тифож во время представления, а так же в Вилландри и в Юссе. Подумайте о том,
+  что на старинном паровозе можно пообедать или позавтракать. А еще можно изучить реплику парусника 18 века,
+  строящегося группой энтузиастов по старинной технологии на бывших королевских судоверфях. И еще можно посетить
+  на лодке болота и посмотреть, как она организована "болотная" жизнь в домах на сваях, где в гости не пойдешь и
+  не поедешь, а только поплывешь. А можно побыть троглодитом. И еще можно научиться различать ардуаз.</p>
+<p>Исторические персонажи:</p>
+<p>Генрих II Плантагенет – граф Анжуйский, герцог Нормандии и Аквитани, граф Мена, Пуату, Тура, Оверни, виконт
+  Лиможа, сеньор Ирландии и Бретани, король Англии – владевший всей современной западной Францией и большей
+  частью Британских островов.</p>
+<p>Элеонора Аквитанская — его супруга королева Англии и бывшая королева Франции.</p>
+<p>Король Ричард Львиное Сердце их знаменитый сын.</p>
+<p>Его младший брат Жан Безземельный и его супруга королева Изабелла.</p>
+<p>Король Франции Филипп II Август.</p>
+<p>Король Франции Карл VII.</p>
+<p>Жанна д’Арк.</p>
+<p>Жиль де Ре – Синяя Борода, Шарль Перро, Габриэлла Шанель, покорители неба братья Урайт и Луи Блерио.</p>
+<p>Сюрреалисты Макс Эрнст и Доротея Танинг из городка Huismes.</p>
