--- a/views/aquitaine.handlebars
+++ b/views/aquitaine.handlebars
@@ -1,1 +1,45 @@
 <h1>Аквитания</h1>
+
+<p>Пляжи Биаррица, горные пики Пиренеев, средневековые замки, виноградники долины Гароны и Дордони – все это одна
+  из самых прекрасных провинций Франции, Аквитания.</p>
+<p>Родина гасконцев Сирано де Бержерака и д'Артаньяна разительно отличается от всей остальной Франции. Наверное,
+  это связано с тем, что в течение трех веков, до конца Столетней войны, Аквитания принадлежала Англии. Сам Ричард
+  Львиное Сердце был одним из герцогов Аквитанских. Близкое соседство с Испанией (Аквитанию еще называют Землей
+  басков) также накладывает свой отпечаток – жителей провинции отличает горячий и открытый нрав. В Аквитанию стоит
+  поехать по многим причинам: здесь интересная архитектура, представляющая собой напластование древнеримской,
+  французской и английской культур; здесь можно погулять в самом большом в Европе сосновом лесу, посаженном по
+  приказу Наполеона, чтобы избежать образования гигантских дюн и попробовать местные гастрономические изыски,
+  которые Франция поставляет всему остальному миру: вино, устрицы, трюфели, козий сыр. А начинать путешествие,
+  конечно же, нужно в Бордо.</p>
+
+<h2>Бордо</h2>
+
+<p>Это столица Аквитании и регион, где производят одни из лучших в мире вин. Начало виноделию положили римляне,
+  две тысячи лет назад посадившие здесь первую виноградную лозу. Теперь виноградники покрывают чуть ли не каждый
+  свободный сантиметр на 120 тысячах гектаров, на которых расположен Бордо. Они и в тенистых ложбинах, и в
+  прогалинах сосняков, на холмах и на плато, вокруг поселений и церквей, на улицах маленьких городов и селений.
+  Каждый район здесь обладает уникальным своеобразием, способствуя появлению столь же разнообразного по вкусовым
+  оттенкам винограда. Благодаря различию почв, сортов винограда и техник виноделия бордосские вина – красные,
+  белые сухие, розовые – подразделяются на 57 различных марок и предлагают настоящую мозаику вкуса и удовольствия.
+  Здесь же делают коньяк и арманьяк.</p>
+
+<h2>Аркашон</h2>
+
+<p>Вдоль побережья залива Аркашон расположено множество рыбных ресторанчиков, в которых всегда нет отбоя от
+  посетителей. Неудивительно, ведь Аркашон еще называют мировой устричной столицей. Если заказать устрицы в одном
+  из них, официант охотно укажет вам на устричную плантацию, расположенную в поле зрения в заливе, откуда это
+  лакомство было привезено менее часа назад.</p>
+
+<h2>Деревня Вик</h2>
+
+<p>Место славится тем, что здесь располагаются знаменитые трюфельные поля. Их поиском занимаются специально
+  обученные собаки. С двух­-трех месяцев им в молоко подливают настой трюфеля, чтобы они приучались к запаху. Потом
+  учат приносить апорт, натертый свежими грибами, затем начинают закапывать его в землю, чтобы собака научилась
+  его находить. На обучение одной собаки уходит около пяти тысяч евро, но затраты с лихвой окупаются, когда она
+  начинает приносить трюфели.</p>
+
+<h2>Сан Жан де Люз до Сан Пье де Порт</h2>
+
+<p>От маленькой рыбацкой деревушки Сан Жан де Люз до Сан Пье де Порт, городка в горах, где обычно останавливаются
+  паломники, идущие в Сантьяго де Компостела, проходит сырная дорога. Изготовлением сыра здесь не занимается
+  только ленивый. Попробовать свой особый сорт козьего сыра здесь предлагают буквально в каждом доме.</p>
