--- a/views/brittany-normandy.handlebars
+++ b/views/brittany-normandy.handlebars
@@ -1,1 +1,157 @@
-<h1>Бретань, Нормандия</h1>
+<h1>Бретань</h1>
+
+<p>Уникальность и богатство Франции заключается в том числе в удивительном разнообразии ее провинций и регионов,
+  каждый из которых представляет огромный интерес.</p>
+<p>Мы хотим Вам представить Бретань, так любимую французами за особый шарм, неспешность, уникальную кухню, уют
+  старинных замков и маленьких гостиниц, аромат и свежесть океана.</p>
+<p>Бретань — окруженный Атлантическим океаном полуостров, расположенный на самом западе страны. В свое время
+  предки бретонцев обитали на территории современных английских островов. В V-VI веках под давлением завоевателей,
+  пришедших с континента, они переселились на полуостров и свою новую родину назвали Малая Бретань или просто
+  Бретань, а свою историческую родину — Большая или Великая Бретань, откуда и происходит совтеменное название
+  Великобритании.</p>
+<p>Бретань — это суровость и нежность, природа и культура.</p>
+<p>Бретань — это море: живописные порты, рыбацкие шхуны, корабли, яхты, регаты, морские прогулки.</p>
+<p>Бретань — это красивейшие пейзажи: причудливые скалы, словно выточенные талантливым скульптором из
+  разноцветного гранита, розового, серого, красного, синего, зеленого. Это изумрудное море, и ярко-зеленые хвойные
+  и лиственные леса с кристальными речками и озерцами, чередующиеся пастбищами, полями и чистенькими хуторами и
+  городками.</p>
+<p>Бретань — это белые домики с антрацитовыми крышами, старинные замки и храмы.</p>
+<p>Бретань — это лучшее во Франции молоко и масло, знаменитые колбасы и артишоки. Бретань — это также и изысканная
+  приморская кухня, устрицы, мидии, омары, пшеничные и гречневые блины, знаменитый яблочный сидр, медовуха,
+  "вода жизни" — местный аналог кальвадоса.</p>
+<p>Бретань — это история и легенды. Мощные гранитные замки, не имеющие аналогов в Европе, величественные храмы и
+  соборы, уникальные кальверы (придорожные распятия), уникальные древние монолиты шеститысячелетней давности,
+  уходящие рядами на сотни и сотни метров. В Бретани происходили поиски Священного Грааля, жили и сражались
+  король Артур, Ланцелот, Мерлин, феи Морган и Вивиан и Синяя Борода, здесь любили и страдали Тристан и
+  Изольда.</p>
+<p>Бретань — это живые традиции кельтской культуры, совершенно особенный язык, особая музыка, костюмы, традиции и
+  праздники. Здесь собственными глазами можно увидеть мистическую культуру кельтов, ставшую популярной благодаря
+  Вальтеру Скотту, Толкиену и Шарлю Перро, которые использовали кельтские мотивы, создавая "Властелина колец" или
+  легенды о Мерлине, короле Артуре, рыцарях Ланцелоте и Перцефале, сказки о Красной Шапочке, о Спящей Красавице и
+  Синей Бороде.</p>
+<p>Нормандия — также одна из любимых французских провинций, расположена на побережье Ла-Манша. Она славится
+  старинными замками, роскошными курортами, живописными портовыми городками, казино, устрицами, сырами и
+  кальвадосом. Здесь принято отдыхать летом, поиграть в казино и вести светский образ жизни. Именно здесь, на
+  высокой скале, возвышающейся над морем, находится знаменитое и уникальное аббатство VIII века, Мон Сен-Мишель.
+  Вас ждет романтическая атмосфера нормандских городков, изысканная кухня, дары моря, чистый воздух, пропитанный
+  дыханием океана и множество историй и легенд.</p>
+<p>В Руане, столице Нормандии, находится один из красивейших кафедральных соборов Франции, заложенный в 1200 году.
+  Нотр Дам Де Руан отличается изяществом линий, величием и легкостью внутреннего оформления, изысканностью
+  фасадов, запечатленных импрессионистами. В этом удивительном городе сохранились почти в первозданном виде дома
+  и целые улицы XV-XVIII веков. Здесь, на площади, стоит храм Св. Жанны Д′Арк, памятный крест и музей, открытый в
+  память о юной и бесстрашной француженке.</p>
+<p>Живописное побережье Атлантики украшено грандиозными, единственными в своем роде резными фигурными скалами,
+  выточенными ветром, солнцем и морем. Эти места воспеты Мопассаном и Флобером, изображены на полотнах знаменитых
+  французских импрессионистов — маленькие города Онфлер, Фекам, Иппор, Этрета, где особенно пронзительно
+  чувствуешь очарование Нормандии. Здесь, прогуливаясь по мощеным набережным Довиля и Трувиля, можно почувствовать
+  истинную элегантность и шик старинных французских курортов.</p>
+<p>Если Вас интересует история, восхищает готика, если Вы любите творения импрессионистов — приезжайте в
+  Нормандию.</p>
+<p>По Вашему желанию мы организуем экскурсии по Бретани и Нормандии из Парижа, Рена, Киберона, Сен-Мало, Динара и
+  Карнака, Довидя и Трувиля.</p>
+<p>Сен Мало - курорт с песчаными пляжами. Порт, старинный пиратский город-крепость. Центр талассотерапии. Центр
+  изучения подводного мира с гигантским аквариумом. Известные бары и рестораны.</p>
+<p>Динар - курорт с песчаными пляжами. Городские замки-виллы. Центр талассотерапии.</p>
+<p>Мыс Фреель - дикий берег розового гранита.</p>
+<p>Форт Ля Лат - средневековый замок на скале над океаном.</p>
+<p>Сен Жакю - устричные фермы.</p>
+<p>Динан - старинный город с живописными резными постройками.</p>
+<p>Доль - Кафедральный собор. Музей кафедральных соборов Франции.</p>
+<p>Мон Доль - легендарное место битвы Архангела Михаила с дьяволом.</p>
+<p>Канкаль - устричная столица Франции. Фермы. Музей устриц.</p>
+</p>Сен Мишель - восьмое чудо света. Аббатство с 1300-летней историей.</p>
+<p>Трегье - Кафедральный собор. Мощи Святого Ива, покровителя юристов и, особенно, адвокатов. Старинный город.</p>
+
+<h1>Нормандия</h1>
+
+<p>Нормандия — также одна из любимых французских провинций, расположена на побережье Ла-Манша. Она славится
+  старинными замками, роскошными курортами, живописными портовыми городками, казино, устрицами, сырами и
+  кальвадосом. Здесь принято отдыхать летом, поиграть в казино и вести светский образ жизни. Именно здесь, на
+  высокой скале, возвышающейся над морем, находится знаменитое и уникальное аббатство VIII века, Мон Сен-Мишель.
+  Вас ждет романтическая атмосфера нормандских городков, изысканная кухня, дары моря, чистый воздух, пропитанный
+  дыханием океана и множество историй и легенд.</p>
+<p>В Руане, столице Нормандии, находится один из красивейших кафедральных соборов Франции, заложенный в 1200 году.
+  Нотр Дам Де Руан отличается изяществом линий, величием и легкостью внутреннего оформления, изысканностью
+  фасадов, запечатленных импрессионистами. В этом удивительном городе сохранились почти в первозданном виде дома
+  и целые улицы XV-XVIII веков. Здесь, на площади, стоит храм Св. Жанны Д′Арк, памятный крест и музей, открытый в
+  память о юной и бесстрашной француженке.</p>
+<p>Живописное побережье Атлантики украшено грандиозными, единственными в своем роде резными фигурными скалами,
+  выточенными ветром, солнцем и морем. Эти места воспеты Мопассаном и Флобером, изображены на полотнах знаменитых
+  французских импрессионистов — маленькие города Онфлер, Фекам, Иппор, Этрета, где особенно пронзительно
+  чувствуешь очарование Нормандии. Здесь, прогуливаясь по мощеным набережным Довиля и Трувиля, можно почувствовать
+  истинную элегантность и шик старинных французских курортов.</p>
+<p>Если Вас интересует история, восхищает готика, если Вы любите творения импрессионистов — приезжайте в
+  Нормандию.</p>
+<p>По Вашему желанию, мы организуем экскурсии по Бретани и Нормандии из Парижа, Рена, Киберона, Сен-Мало, Динара
+  и Карнака, Довидя и Трувиля.</p>
+<p>Сен Мало - курорт с песчаными пляжами. Порт, старинный пиратский город-крепость. Центр талассотерапии. Центр
+  изучения подводного мира с гигантским аквариумом. Известные бары и рестораны.</p>
+<p>Динар - курорт с песчаными пляжами. Городские замки-виллы. Центр талассотерапии.</p>
+<p>Мыс Фреель - дикий берег розового гранита.</p>
+</p>Форт Ля Лат - средневековый замок на скале над океаном.</p>
+<p>Сен Жакю - устричные фермы.</p>
+<p>Динан - старинный город с живописными резными постройками.</p>
+<p>Доль - кафедральный собор. Музей кафедральных соборов Франции.</p>
+<p>Мон Доль - легендарное место битвы Архангела Михаила с дьяволом.</p>
+<p>Канкаль - устричная столица Франции. Фермы. Музей устриц.</p>
+<p>Сен Мишель - восьмое чудо света. Аббатство с 1300-летней историей.</p>
+<p>Трегье - кафедральный собор. Мощи Святого Ива, покровителя юристов и, особенно, адвокатов. Старинный город.</p>
+<p>Плуманак - Уникальные фигурные скалы из розового гранита, подобные абстрактным скульптурам.</p>
+<p>Пероз-Гирек - живописный курортный город с песчаными пляжами.</p>
+<p>Розамбо - красивый, уютный замок с великолепной библиотекой и огромным садом.</p>
+<p>Фужер - самый крупный в Западной Европе средневековый военный замок. Великолепный цветочный сад.</p>
+<p>Витрэ - уникальная гармония исторического центра и замка.</p>
+<p>Рош-Севиньи - замок, хранящий память о величайшей писательнице XVII века мадам Севиньи.</p>
+<p>Бурбансэ - классический замок XVII-XVIII веков. Живописный парк. Не менее живописный зоопарк.</p>
+<p>Комбур - суровый, романтичный замок, где провел детство французский писатель Шатобриан.</p>
+<p>Монмюран - замок, связанный с историей величайшего полководца в истории Столетней войны Дю Геклена.
+  Великолепная панорама.</p>
+<p>Рен - столица Бретани. Старые кварталы. Парламент Бретани. Собор Святого Петра XVIII века.</p>
+<p>Плоермель - бывшая столица Бретани XIV века. Старинные кварталы. Церковь Святого Армеля. Могила герцога Жанна
+  III.</p>
+<p>Креви - замок с 1700-летней историей. Уникальная коллекция костюмов XVIII-XIX веков.</p>
+<p>Жослен - замок рода Роганов. Гармоничное сочетание старинного замка и прилегающих кварталов. Уникальный музей
+  кукол.</p>
+<p>Лес Броселианд - живописный лесной массив, наполненный кельтскими легендами о короле Артуре, феях, славных
+  рыцарях, поисках святого Грааля.</p>
+<p>Тресасон - средневековый таинственный замок на берегу озера.</p>
+<p>Компер - змок, центр артуроведениея. Место рождения феи Вивиан. Озеро, где воспитывался рыцарь Ланцелот.
+  Могила Мерлина.</p>
+<p>Трегорентек - Золотое Дерево. Долина "без возврата" — долина проклятия неверных рыцарей. Тысячелетний дуб
+  Эона.</p>
+<p>Пон Авен - живописный городок с многочисленными мельницами на чистейшей реке Авен. Город, где творил Гоген.</p>
+<p>Конкарно - живописная островная крепость.</p>
+<p>Кериоле - русский замок княгини Нарышкиной, матери Феликса Юсупова, в Бретани.</p>
+<p>Карнак - самое крупное в Европе скопление доисторических мегалитов.</p>
+<p>Кимпер - столица Финистера. Собор Святого Корентина. Старинные кварталы. Музей изящных искусств, картины школы
+  Пон Авен. Фабрика Кимперского Фаянса.</p>
+<p>Плейбен - типичный для Финистера городок. Уникальный кальвер — придорожное распятие.</p>
+<p>Локронан - городок, внесенный в списки самых красивых во Франции. Один из важнейших центров кельтской
+  культуры.</p>
+<p>Мыс Пенхир - самая западная точка северной части Евразии.</p>
+<p>Мензхом - священное место. Панорама на брестскую бухту.</p>
+<p>Ван - старинный город с крепостными стенами. Один из самых посещаемых городов в Бретани.</p>
+<p>Орэ Квартал Сэн Густан — живописнейший порт. Связан с Бенжамином Франклином, Кадуалем.</p>
+<p>Довиль - курорт с песчаными пляжами. Казино. Корабли, яхты. Центр Талассотерапии.</p>
+<p>Трувиль - курорт с песчаными пляжами. Казино. Городские замки-виллы.</p>
+<p>Этрета - уникальные скалы — визитная карточка Нормандии. Элитный курорт времен Курбе, Моне, Мопассана.</p>
+<p>Кани - романтичный замок XVII века, классический парк.</p>
+<p>Мост Нормандия - шедевр эстетики и строительства XX века в устье Сены.</p>
+<p>Онфлер - живописнейший город-порт. Антикварные и художественные салоны. Дегустация Кальвадоса.</p>
+<p>Живерни - усадьба-музей Клода Моне. Великолепнейший парк. Кувшинки.</p>
+<p>Сэн Адресс - курортный пригород Гавра, навсегда связанный с именем Моне.</p>
+<p>Жумьеж - бывшее аббатство. Шедевр романского стиля.</p>
+<p>Фекам - живописный рыбацкий порт. Свежие устрицы и рыба. Уникальное аббатство Св. Троицы. "Врата Рая" —
+  аббатский дворец. Историческое производство всемирно известного ликера Бенедиктин. Дегустация.</p>
+<p>Анделис - шедевр средневековой архитектуры. Замок Ричарда Львиное Сердце. Музей полка Нормандия-Неман.</p>
+<p>Бизи - замок в классическом стиле. Интересный интерьер.</p>
+<p>Руан - столица Нормандии. Собор Нотр Дам де Руан. Дворец Правосудия. Место казни Жанны Д'Арк. Музей изящных
+  искусств. Один из старейших ресторанов Франции XIV века.</p>
+<p>Авранш - типичный для Нижней Нормандии городок. Интересный собор.</p>
+<p>Сэн Жермен - роскошный замок в типично нормандском стиле.</p>
+<p>Кревкер - живописный городок. Типичные для департамента Кальвадос и фахверковые здания. Замок в нормандском
+  стиле.</p>
+<p>Лизье - живописный городок. Крупный религиозный центр, место паломничества к Св. Терезии.</p>
+<p>Бомениль - замок. Шедевр XVII века. Причудливое сочетание красного кирпича и белого камня.</p>
+<p>Кан - светская столица Нормандии. Город Гийома — Вильяма, завоевателя Англии. Великолепные мужское и женское
+  аббатства XI века. Замок герцогов Нормандии. Гигантские цветники.</p>
