Add slider, few layout improvements

--- a/views/burgundy.handlebars
+++ b/views/burgundy.handlebars
@@ -1,1 +1,100 @@
 <h1>Бургундия</h1>
+
+<p>Бургундия расположена на Юго-восток от Парижа, около 360 километров по шоссе Париж — Дижон.</p>
+<p>Главными достопримечательностями провинции можно назвать:</p>
+<p>Аббатство Везлей - основано в 878 году.</p>
+<p>Крупнейший религиозный центр Европы, шедевр романского стиля — аббатство Везлей сыграло особую роль в
+  Крестовых подах. Связано с именами Св. Бернара, Людовика VII, Элеоноры Аквитанской, Филиппом Августом,
+  Ричардом Львиное Сердце. В крипте хранятся мощи Св. Марии-Магдалины. Внесено в список выдающихся памятников
+  Юнеско.</p>
+<p>Оксер - живописный город на берегах реки Йона. Великолепные готические и романские церкви, старинные
+  кварталы.</p>
+<p>Шабли - город, всемирно известен своим белым вином. Тут насчитывается более сотни производителей этого
+  вкусного и полезного напитка.</p>
+<p>Северная Бургундия - "амфитеатр" виноградников Шабли. Дегустационные погреба.</p>
+<p>Винная дорога Бургундии - проходит между городами Дижон и Бон, и чуть южнее Бона.</p>
+<p>Дижон - столица региона. Дворец герцогов. Музей изящных искусств.</p>
+<p>Бон - винная столица Бургундии. В бывшем дворце герцогов Бургундии сейчас располагается винный музей.
+  Бесконечные монастырские погреба, где можно напробоваться до потери респектабельности. В конце января 2005
+  года в городе проходит празднование Св. Винсента — святого патрона виноделов.</p>
+<p>Бон — старый, красивый и интересный город. Не будет лишним совершить небольшое виртуальное путешествие по его
+  улочкам. Прогуляемся, к примеру, метров сто...</p>
+
+<h2>100 метров по бону</h2>
+
+<p>Проехали городские ворота. Остановились около сторожевой башни с колоколами. И для обороны хороша и, самое
+  главное, от пожаров беречься помогает. Да и часы на ней есть. Ну, конечно, не такие древние как в Руане или
+  Париже, но все равно 450 лет — а работают.</p>
+<p>Идем по улице Монж. Если Вы обучались в техническом ВУЗе, то плоды деятельности месье Монж Вы испытали на
+  себе. 213 лет назад, когда небезызвестный вдохновитель Володи Ульянова — Робеспьер ввел в эксплуатацию новинку
+  другого выдающегося французского изобретателя — доктора Гильотена, уроженец Бона изобрел основы наук,
+  развившихся в начертательную геометрию и сопромат.</p>
+<p>На углу — неприметное бистро. Тут можно отведать местной кухни: петуха, тушеного в вине, мясо бургиньон
+  местной породы Шароле — лучшей мясной породы Франции, яйца а ля мерет (приготовляются в специальном мешочке
+  с красной фасолью и подаются наподобие супа-соуса) и, конечно, улитки виноградные, без них в Бургундии —
+  никуда. Да, совсем забыл про главное блюдо бургундского стола — горчицу. Действительно хороша. Это не
+  немецкая или американская сладковатая жижа без характера, и не отечественный вариант, где сразу так шибанет
+  в нос, что только держись. А именно то, что надо и как положено: первый вкус — деликатный, второй вкус — с
+  характером, послевкусие — приятное и настойчиво требующее повторения. Если аппетит разыгрался, то рядом можно
+  прибрести десятки сортов горчицы. Что интересно, горчицей Бургундия славится на всю Европу с XV века, хотя ни
+  в Бургундии, ни во Франции горничных полей не было и нет.</p>
+<p>В русском языке есть лаконичное слово "кирять" в значении "немного (или много, по обстоятельствам) выпить".
+  Так вот, в Бургундии, есть напиток, называемый кир. Заметьте, придумали его не местные антисоциальные элементы,
+  а, наоборот, местный аббат. И правда, надо было отделить школу от церкви. А то не совсем понятно, чем монахи
+  занимались в свободное от отправления культа время.</p>
+<p>Кстати, все знаменитые виноградники Бургундии высадили и выхаживали в течении тысячелетий также монахи. В
+  Бургундии снег выпадает, это не совсем Франция с ее беззимньем. То есть завезли лозу римляне, но адаптировали
+  к местным условиям монахи. У каждого свой путь к богу.</p>
+<p>В самом Боне по сей день функционируют погреба XII-XIV веков, и, конечно же, эти погреба создавали монахи. И
+  хранили там вина. И дегустировали. И Вы можете продегустировать. Главное — чтобы хватило здоровья, это Бон.
+  Выдадут вам чарочку, которая называется тестеван (тест — вкус, ван — вино), и пойдете по длинным
+  подвалам-переходам, где там и сям стоят бочки, а на них — свечи и открытые бутылки: белое, красное,
+  аппелясионы обозначены. Нынешние владельцы погребов на Гран Крю тоже не жадничают. Заплатил на входе и
+  дегустируй сколько хочешь, французский шведский стол. Может у Вас первого за многовековую историю Бона
+  получится попробовать все?</p>
+<p>Все вина имеют категорию АОС — аппелясьон д′орижин котроле, что значит — технология от и до выдержана.
+  Многовековая технология. И если решил производитель "схимичить", то братья по цеху, члены многочисленных
+  гильдий винопроизводителей с многовековыми традициями, этого не потерпят. Очень решительно не потерпят и с
+  далеко идущими последствиями. И не сможет больше недобросовестный производитель торговать. Зато уважаемые
+  члены гильдии собираются на свои ежегодные праздниства, главным из которых является день Св. Винсента.
+  Одевают традиционные мантии, шапочки, вооружаются тестеванами и... понеслось. Да гостей принимают. И Вас
+  могут пригласить, мы все устроим.</p>
+<p>Но перед тем, как погрузиться в дебри погребов, постоим на площади.</p>
+<p>Тут ежегодно проходят котировки бургундского вина. На это событие ценители вина со всего мира приезжают. Лет
+  20 назад стали приезжать японцы и цены котировок стали уверенно рости. Ну а как потянулись российские торговые
+  дома, так цены даже и думать перестали понижаться.</p>
+<p>Также перед нами великолепная постройка 600-летней давности с цветными крышами — богоприемный дом, госпиталь,
+  основанный канцлером Ролоном. В Лувре есть картина "фламандца" Ван Эйка, самая старая картина в Европе
+  выполненная маслом, шедевр, по художественной и исторической ценности соперничающий с Джокондой. И изображен
+  на этой картине Ролон вместе с Христом и Девой Марией. В том же зале Лувра выставлены работы ученика Ван Эйка
+  — Ван Дер Вейдена. А самая знаменитая работа Ван Дер Вейдена — Апокалипсис — доступна для обозрения в Боне,
+  где мы с Вами гуляем.</p>
+<p>Почему "фламандцы" — в скобках? Дело в том, что государство Бельгия существует лишь с 1824 года. А во времена
+  Ролона ее территория была частью Бургундии в ранге герцогства. И захотелось Бургундии стать королевством, выйдя
+  из под формальной зависимости от чуждой этнически Франции. Но как сделать это? Негоже, по понятиям эпохи,
+  герцогу воевать против своего короля. То есть воевать то можно, но в ранг королевства точно не перейдешь. Не
+  признают ни соседи, ни Папа. Вот Ролон и замыслил помогать, но скрытно, англичанам, для достижения своих
+  бургундских целей. Интересная тема: вот нам и разгадка вопроса истории. Как это так, малонаселенная Англия
+  (5 млн против 15 млн), имея худшее вооружений могла больше ста лет успешно воевать на чужой территории. Без
+  бургундского фактора, эту загадку не решить. Скажу одно Ролон (аналог Бисмарка), своей цели практически достиг,
+  но как обычно спасло Францию чудо. Об Этом поговорим при встрече. Но отмечу лишь, что Франция решила
+  бургундский вопрос лишь к 18 веку, т.е. 400 лет потребовалось. И как наводка на ответы скажу еще, что были
+  времена когда и Бургундия, и нынешняя Бельгия, и Австрия, и Южная и Западная Германия и Испания, и часть
+  Италии, и Мексика, и Венесуэла, и Перу входили в состав одного государства. Мы говорили о цветных крышах:
+  посмотрите при случае в Вене на крышу собора Св. Стефана, в Брюсселе на Маркет Плац на дома 16 века. Да, и
+  еще. Все европейские земли этого буругндско-габсбурского дома имеют интересную кухню.</p>
+<p>Если отъехать от Бона на север по Винной дороге, попадем в административную столицу Бургундии — город Дижон.
+  И там есть что посмотреть: дворец Герцогов Бургундских, Нотр Дам де Дижон, Сен Бегин, городские виллы XV-XIX
+  веков. И если посмотреть на это путешествие с точки зрения желудка — и в Дижоне есть, что и где поесть и
+  выпить.</p>
+<p>Конечно, в Дижоне есть на что и посмотреть. Выбор — более, чем большой: есть шедевры романского строительства,
+  как аббатство Везле, хранящее мощи Марии Магдалины, аббатства Фонтене, Клюни, Турнюс. Есть замки Базош, Комарен,
+  Бюсси, Конде, и другие. Есть памятники античной истории периода войн Гая Юлия Цезаря и Версенжеторикса. Есть
+  дивная своей природой дижонская возвышенность — источник сотни рек, включая Сену, долины, леса, гроты, речушки,
+  озера. Кто, следуя Омару Хаяму, находится в поисках истины, заинтересуется названиями Шасань Монтраше, Ромене
+  Конти, Ришбур, Нью Сен Жожр, Фиксен, Шабли.</p>
+<p>Мы с Вами прошли по Бону всего 100 метров. Тут есть, на что посмотреть, что попробовать, о чем послушать. А уж
+  если на 100 метрах можно увидеть столько — сколько же можно увидеть во всей Бургундии! Мы с удовольствием и
+  гордостью покажем Вам, куда встать в Бургундии.</p>
+<p>Вы увидите многообразие, величие, красоту, падения и взлеты, радость и слезы красоты и причуды страны, которую
+  местные жители именуют как FRANCE, и в гранях этого алмаза истории и культуры Вы увидите отражение вашего Я.</p>
