--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -252,6 +252,19 @@
                         <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700">#winter</span>
                     </div>
                 </div>
+
+                <div class="max-w-sm mx-auto flex p-6 bg-white rounded-lg shadow-xl m-4">
+                    <div class="flex-shrink-0">
+                        <img class="h-12 w-12" src="/images/whatsapp.svg" alt="WhatsApp">
+                    </div>
+                    <div class="ml-6 pt-1">
+                        <h4 class="text-xl text-gray-900 leading-tight">WhatsApp</h4>
+                        <p class="text-base text-gray-600 leading-normal">Мы всегда на линии!</p>
+                        <div class="mt-4">
+                            <button class="text-purple-500 hover:text-white hover:bg-purple-500 border border-purple-500 text-xs font-semibold rounded-full px-4 py-1 leading-normal">Отправить сообщение</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div><!-- /Content -->
 
