--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -591,6 +591,27 @@ video {
   height: auto;
 }
 
+h1 {
+  font-size: 1.875rem;
+  --text-opacity: 1;
+  color: #000;
+  color: rgba(0, 0, 0, var(--text-opacity));
+}
+
+h2 {
+  font-size: 1.5rem;
+  --text-opacity: 1;
+  color: #000;
+  color: rgba(0, 0, 0, var(--text-opacity));
+}
+
+p {
+  --text-opacity: 1;
+  color: #4a5568;
+  color: rgba(74, 85, 104, var(--text-opacity));
+  margin-bottom: 1rem;
+}
+
 .container {
   width: 100%;
 }
