Add some content

--- a/views/brittany-normandy.handlebars
+++ b/views/brittany-normandy.handlebars
@@ -4,14 +4,14 @@
   каждый из которых представляет огромный интерес.</p>
 <p>Мы хотим Вам представить Бретань, так любимую французами за особый шарм, неспешность, уникальную кухню, уют
   старинных замков и маленьких гостиниц, аромат и свежесть океана.</p>
-<p>Бретань — окруженный Атлантическим океаном полуостров, расположенный на самом западе страны. В свое время
+<p>Бретань - окруженный Атлантическим океаном полуостров, расположенный на самом западе страны. В свое время
   предки бретонцев обитали на территории современных английских островов. В V-VI веках под давлением завоевателей,
   пришедших с континента, они переселились на полуостров и свою новую родину назвали Малая Бретань или просто
   Бретань, а свою историческую родину — Большая или Великая Бретань, откуда и происходит совтеменное название
   Великобритании.</p>
-<p>Бретань — это суровость и нежность, природа и культура.</p>
-<p>Бретань — это море: живописные порты, рыбацкие шхуны, корабли, яхты, регаты, морские прогулки.</p>
-<p>Бретань — это красивейшие пейзажи: причудливые скалы, словно выточенные талантливым скульптором из
+<p>Бретань - это суровость и нежность, природа и культура.</p>
+<p>Бретань - это море: живописные порты, рыбацкие шхуны, корабли, яхты, регаты, морские прогулки.</p>
+<p>Бретань - это красивейшие пейзажи: причудливые скалы, словно выточенные талантливым скульптором из
   разноцветного гранита, розового, серого, красного, синего, зеленого. Это изумрудное море, и ярко-зеленые хвойные
   и лиственные леса с кристальными речками и озерцами, чередующиеся пастбищами, полями и чистенькими хуторами и
   городками.</p>
