--- a/views/legal-notice.handlebars
+++ b/views/legal-notice.handlebars
@@ -1,1 +1,17 @@
 <h1>Mentions légales</h1>
+
+<h2>Informations légales</h2>
+
+<p>Conformément aux dispositions de l’article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans
+  l’économie numérique, nous vous informons que:</p>
+<p>Le site internet www.frmoi.eu est édité par:</p>
+<p>FRANCE ET MOI (F&M) au capital de 10.000,00 EURO<br>
+  Numéro SIRET : 48259662400015<br>
+  Siège social : 66 Avenue des Champs Elysees 75008 PARIS</p>
+
+<h2>Hebergement</h2>
+
+<p>Le site www.frmoi.eu est heberge par:</p>
+<p>1&1 INTERNET SARL au capital de 100.000,00 EURO<br>
+  Numéro SIRET : 43130377500016<br>
+  Siege social : 7 Place de la Gare 57200 SARREGUEMINES. www.1and1.fr</p>
