--- a/views/lyon.handlebars
+++ b/views/lyon.handlebars
@@ -1,1 +1,15 @@
 <h1>Лион</h1>
+
+<h2>Лион. Дофине. Савойя. Окрестности озера Леман</h2>
+
+<p>Лиoн — город во Франции, административный центр региона Рона-Альпы, департамента Рона, а также 14 кантонов;
+  имеет 6 предместий.</p>
+<p>Город Лион является центром "Большого Лиона" или Лионского сообщества городов, состоящего из 57
+  административных единиц и являющегося самым большим по численности населения (более 1,2 млн жителей) из
+  подобных образований во Франции.</p>
+<p>Дофине — историческая область Франции, включающая нынешние департаменты Изер, Верхние Альпы, большую часть
+  департамента Дром и небольшую часть департамента Воклюз. Главный город — Гренобль.</p>
+<p>Савойя — историческая область на юго-востоке Франции у подножия Альп. Некоторое время существовала в качестве
+  самостоятельного герцогства, которое в период своего расцвета включало территории Ниццы, Генуи, Женевы и
+  Пьемонта. С 1860 года в составе Франции, хотя Савойская династия становится правящей во вновь созданной Италии.
+  В современной Франции на территории Савойи расположены два департамента — Савойя и Верхняя Савойя.</p>
